feat: add map region enrichment
